nymea-plugins-simulation (1.7.004) buster focal jammy; urgency=medium

  * Added surPlusHeatPump
  * execute action forsurPlusHeatPump

  -- Tim Fischer <t.fischer@consolinno.de>  Thu, 29 Okt 2024 11:04:14 +0100

nymea-plugins-simulation (1.7.003) buster focal jammy; urgency=medium

  * Added dynamic pricing simulation
  * Adopt changes of smartheatingrod interface

 -- Leonhard Heizinger <l.heizinger@consolinno.de>  Fri, 23 Aug 2024 10:44:52 +0100

ymea-plugins-simulation (1.7.002) buster focal jammy; urgency=medium

  * Added smart heating rod simulation

 -- Leonhard Heizinger <l.heizinger@consolinno.de>  Fri, 01 Dec 2023 10:44:52 +0100


nymea-plugins-simulation (1.7.001-1) buster focal jammy; urgency=medium

* Adapt to new versioning schema

 -- Florian Knab <f.knab@consolinno.de> Thu, 19 Sep 2023 7:50:53 +0200


nymea-plugins-simulation (1.7.001) jammy; urgency=medium

  * Added generic consumer with API

 -- Leonhard Heizinger <l.heizinger@consolinno.de>  Tue, 05 Sep 2023 10:44:52 +0100

nymea-plugins-simulation (1.7.0-1) jammy; urgency=medium

  [ Michael Zanetti ]
  * Update thing class names to include "Simulated" in their names
  * Sensors: Add min/max values to co2 sensor
  * Weather station simulation: Add min/max to pressure state
  * Window sensor simulation: Trigger state less often

 -- jenkins <developer@nymea.io>  Tue, 21 Feb 2023 17:44:52 +0100

nymea-plugins-simulation (1.6.3) jammy; urgency=medium


 -- jenkins <developer@nymea.io>  Wed, 01 Feb 2023 12:18:11 +0100

nymea-plugins-simulation (1.6.2) jammy; urgency=medium


 -- jenkins <developer@nymea.io>  Mon, 16 Jan 2023 14:35:59 +0100

nymea-plugins-simulation (1.6.1) jammy; urgency=medium


 -- jenkins <developer@nymea.io>  Fri, 23 Dec 2022 11:32:40 +0100

nymea-plugins-simulation (1.6.0) jammy; urgency=medium

  [ Michael Zanetti ]
  * Sensors: Add a vibration sensor

 -- jenkins <developer@nymea.io>  Sat, 10 Dec 2022 14:54:31 +0100
