@@ -2,6 +2,7 @@ nymea-plugins-simulation (1.7.004) buster focal jammy; urgency=medium
 
   * Added surPlusHeatPump
   * execute action forsurPlusHeatPump
+  * converting into surplus absolut
 
   -- Tim Fischer <t.fischer@consolinno.de>  Thu, 29 Okt 2024 11:04:14 +0100
 
